erDiagram
    EPISODES {
        int id PK
        string title
    }
    
    PARTS {
        int id PK
        int episode_id FK
        int orig_id FK
    }
    
    ITEMS {
        int id PK
        int part_id FK
        int orig_id FK
    }
    
    BLOCKS {
        int id PK
        int item_id FK
        int orig_id FK
    }
    
    DUPLICATIONS {
        int id PK
        int episode_id FK
        int new_episode_id FK
        string status
    }
    
    
    
    EPISODES ||--o{ PARTS : "has many"
    PARTS ||--o{ ITEMS : "has many"
    ITEMS ||--o{ BLOCKS : "has many"
    EPISODES ||--o{ DUPLICATIONS : "source/target"
    
    PARTS ||--o{ PARTS : "original record"
    ITEMS ||--o{ ITEMS : "original record"
    BLOCKS ||--o{ BLOCKS : "original record"

